added logic for taskcreation and simple dialog box

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "basic-template-repo",
-  "version": "1.0.0",
+  "name": "Todo-List",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,20 +11,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/superansh55/basic-template-repo.git"
+    "url": "git+https://github.com/superansh55/Todo-List.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/superansh55/basic-template-repo/issues"
-  },
-  "homepage": "https://github.com/superansh55/basic-template-repo#readme",
+  "homepage": "https://github.com/superansh55/Todo-List#readme",
   "devDependencies": {
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.102.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
+  },
+  "bugs": {
+    "url": "https://github.com/superansh55/Todo-List/issues"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
